# qbitagent

./: .env.example  .gitignore  AUTHENTICATION_IMPLEMENTATION.md  DATABASE_CHAT_ISOLATION.md  DATA_PIPELINE_PLAN.md  DATA_PIPELINE_QUICKSTART.md  FINAL_UPDATE.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LLM_INTEGRATED.md  NEW_FEATURES.md  NOTION_IMPLEMENTATION_SUMMARY.md  NOTION_MCP_INTEGRATION_PLAN.md  NOTION_QUICK_START.md  NOTION_REACT_IMPLEMENTATION.md  NOTION_SETUP.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STRUCTURE.md  RATE_LIMIT_GUIDE.md  REACT_CLIENT_IMPLEMENTATION.md  README.md  SCROLLBAR_IMPROVEMENTS.md  START.md  START_HERE.md  START_WINDOWS.bat  STREAMING.md  WINDOWS_FIX.md  ZAIN_DATA_AGENT_PROMPT.md  config.py  data_pipeline.py  env.example  fastapi_app_fixed.py  llm_integration.py  llm_integration_streaming.py  llm_multi_server.py  llm_multi_server_streaming.py  mcp_client_fixed.py  notion_api_client.py  notion_mcp_client.py  (+11 more)
client/: README.md  bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: RequireAuth.tsx
client/src/components/chat/: ChatArea.tsx  (+8 more)
client/src/lib/: api.ts
client/src/pages/: Auth.tsx  Index.tsx  Landing.tsx
examples/: README.md  sales_data.csv
static/: index.html  index_backup.html
test_uploads/: metadata.json
uploads/: metadata.json
uploads/original_files/: 74f9ccc3-941e-4889-9728-c7ca7521d2aa.csv  bb06cdef-5fe4-4cf9-b05f-f64a20e33466.csv  temp_1de1b391-9e56-4402-949b-0294d628f1f6.xlsx
uploads/zain/: metadata.json
(+3 files in other folders)
