[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "aiosqlite>=0.21.0",
    "anyio>=4.11.0",
    "fastapi>=0.118.3",
    "mcp[cli]>=1.17.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
